--- a/index.html
+++ b/index.html
@@ -6,32 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UserCard</title>
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="userCard">
         <section class="userPhoto">
-            <!--<img src="./style/img/Washington.jpg" height="400px" width="400px" alt="UserPhoto">-->
                 <div class="userInfo">
-                    <div>George Washington</div>
+                    <div class="name">George Washington</div>
                     <div>President of the United States</div>
                 </div>
         </section>
         <section class="info">
             <div class="shots">
-                <div>26</div>
-                <div>Shots</div>
+                <div class="number">26</div>
+                <div class="nameStat">Shots</div>
             </div>
             <div class="followers">
-                <div>943212</div>
-                <div>Followers</div>
+                <div class="number">943212</div>
+                <div class="nameStat">Followers</div>
             </div>
             <div class="projects">
-                <div>421</div>
-                <div>Projects</div>
+                <div class="number">421</div>
+                <div class="nameStat">Projects</div>
             </div>            
         </section>
         <section class="button">
-            <div>FOLLOW</div>
+            <div class="buttonText">FOLLOW</div>
         </section>
     </section>
 </body>
